--- a/api/package.json
+++ b/api/package.json
@@ -12,9 +12,13 @@
   "keywords": [
     "node.js",
     "javascript",
-    "mongoose",
     "postgresel",
     "azure",
+    "serverless",
+    "azure-functions",
+    "azure-devops",
+    "azure-storage",
+    "github-actions",
     "app-service",
     "express"
   ],
@@ -38,7 +42,6 @@
     "eslint-plugin-html": "^6.0.0",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
-    "mongoose": "^5.9.2",
     "morgan": "^1.9.1"
   }
 }
