--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-html": "^6.0.0",
     "express": "^4.17.1",
